style.css
#canvas {
    border: 1px black solid;
    height: 100vh;
    background-color: #f5f5f5;
}

.softwareSystem {
    display: flex;
    justify-content: center;
    align-items: center;
    position: absolute;

    width: 120px;
    height: 75px;
    background-color: #bbb;
    border: 1px solid black;
    transition: border 0.1s ease;
}

.softwareSystem:hover {
  box-shadow: 0 0 3px 2px blue;
}

.person {
    position: absolute;
    width: 100px;
    height: 110px;
    display: flex;
    flex-direction: column;
    align-items: center;
    pointer-events: auto;
}

.person div {
    position: absolute;
    margin-top: 60px;
}

.person::before {
    content: '';
    width: 50px;
    height: 50px;
    background: #bbb;
    border: 1px solid black;
    border-radius: 50%;
}

.person::after {
    content: '';
    width: 100px;
    height: 60px;
    background: #bbb;
    border: 1px solid black;
    border-radius: 8px;
    margin-top: 2px;
}

.person:hover {
  box-shadow: 0 0 3px 2px blue;
}

